--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,9 @@ jobs:
       - image: circleci/node:8.9
     steps:
       - checkout
-      - run: echo "npm installing"
+      - run: echo "npm installing" # encho = printout
       - run: npm install
-      - run: CI=true npm run build
+      - run: CI=true npm run build # CI=true define env variable CI = true
   test:
     docker:
       - image: circleci/node:8.9
@@ -24,11 +24,10 @@ jobs:
       - run: echo "hellllooooo!"
 workflows:
   version: 2
-  build_test_and_lint:
+  build_test_and_lint: # workflow name
     jobs:
-      - build
-      - hithere
+      - build # run parallel
+      - hithere # run parallel
       - test:
-          requires:
+          requires: # test job require hithere job to finish and succed
             - hithere
-
