--- a/package.json
+++ b/package.json
@@ -27,5 +27,15 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
+  "devDependencies": {
+    "husky": "^1.1.3",
+    "prettier": "1.14.3",
+    "pretty-quick": "^1.8.0"
   }
 }
